# django-2-BakhtiyarSailauov

./: pyproject.toml
django_nounchained/: db.sqlite3  manage.py
django_nounchained/django_nounchained/: asgi.py  settings.py  urls.py  wsgi.py
django_nounchained/news/: admin.py  forms.py  models.py  serializers.py  tests.py  urls.py  views.py
django_nounchained/news/migrations/: 0001_initial.py  0002_alter_news_author.py  0002_comments.py
django_nounchained/news/static/news/: style.css
django_nounchained/news/templates/news/: base.html  create_news.html  edit_news.html  news.html  page.html
django_nounchained/news/templates/registration/: login.html  sign_up.html
