[tool.poetry]
name = "django-2"
version = "0.1.0"
description = ""
authors = ["BAkhtiyar <cena61454@gmail.com>"]
readme = "README.md"
packages = [{include = "django_2"}]

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.2.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
